reading env files

--- a/frontend/employees/templates/employees/index.html
+++ b/frontend/employees/templates/employees/index.html
@@ -26,7 +26,11 @@
         </tr>
       {% endfor %}
     {% else %}
-      <p>No employees are available.</p>
+      <tr >
+        <td colspan="3">
+            <i>No employees to show.</i>
+        </td>
+      </tr>
     {% endif %}
 
   </tbody>
